// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrainModal.vue add requirements renders correctly 1`] = `
<bhmodal-stub open="true" title="Training Status" backgroundcloses="true">
  <div class="train-modal">
    <div class="bh-grid bh-grid--column"><strong class="text-color-danger text-center bh-grid__item">
        One or more languages cannot be trained in the moment.</strong>
      <!---->
      <div class="train-modal__wrapper bh-grid__item--nested">
        <div><strong>Missing requirements</strong>
          <div class="train-modal__wrapper__content-requirements">
            <div class="train-modal__wrapper__content__item">
              <p> requirement 1
                <bhlanguageflag-stub language="en" class="train-modal__wrapper__content__item__flag"></bhlanguageflag-stub>
              </p>
            </div>
          </div>
        </div>
        <!---->
      </div>
    </div>
  </div>
  <div class="bh-grid__item text-center train-modal__buttons">
    <bhbutton-stub primary="true" type="button">
      <bhicon-stub value="school"></bhicon-stub> <span>Train</span>
    </bhbutton-stub>
  </div>
</bhmodal-stub>
`;

exports[`TrainModal.vue add warning renders correctly 1`] = `
<bhmodal-stub open="true" title="Training Status" backgroundcloses="true">
  <div class="train-modal">
    <div class="bh-grid bh-grid--column">
      <!----> <strong class="text-color-primary text-center bh-grid__item">
        Your bot is ready to be trained!</strong>
      <div class="train-modal__wrapper bh-grid__item--nested">
        <!---->
        <div><strong>Warnings</strong>
          <div class="train-modal__wrapper__content-warnings">
            <div class="train-modal__wrapper__content__item">
              <p> warning 1
                <bhlanguageflag-stub language="en" class="train-modal__wrapper__content__item__flag"></bhlanguageflag-stub>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="bh-grid__item text-center train-modal__buttons">
    <bhbutton-stub primary="true" type="button">
      <bhicon-stub value="school"></bhicon-stub> <span>Train</span>
    </bhbutton-stub>
  </div>
</bhmodal-stub>
`;

exports[`TrainModal.vue renders correctly 1`] = `
<bhmodal-stub open="true" title="Training Status" backgroundcloses="true">
  <div class="train-modal">
    <div class="bh-grid bh-grid--column">
      <!----> <strong class="text-color-primary text-center bh-grid__item">
        Your bot is ready to be trained!</strong>
      <!---->
    </div>
  </div>
  <div class="bh-grid__item text-center train-modal__buttons">
    <bhbutton-stub primary="true" type="button">
      <bhicon-stub value="school"></bhicon-stub> <span>Train</span>
    </bhbutton-stub>
  </div>
</bhmodal-stub>
`;
